--- a/MusicGen_colab.ipynb
+++ b/MusicGen_colab.ipynb
@@ -16,10 +16,10 @@
       "outputs": [],
       "source": [
         "%cd /content\n",
-        "!git clone -b dev https://github.com/camenduru/MusicGen-hf\n",
-        "%cd /content/MusicGen-hf\n",
+        "!git clone -b dev https://github.com/camenduru/audiocraft\n",
+        "%cd /content/audiocraft\n",
         "!pip install -r requirements.txt\n",
-        "!python app.py"
+        "!python app.py --share"
       ]
     }
   ],
