--- a/MusicGen_rkfg_colab.ipynb
+++ b/MusicGen_rkfg_colab.ipynb
@@ -16,7 +16,7 @@
       "outputs": [],
       "source": [
         "%cd /content\n",
-        "!git clone -b rkfg https://github.com/camenduru/audiocraft\n",
+        "!git clone -b long https://github.com/rkfg/audiocraft\n",
         "%cd /content/audiocraft\n",
         "!pip install -r requirements.txt\n",
         "!python app.py --share"
