--- a/MusicGen_Oncorporation_colab.ipynb
+++ b/MusicGen_Oncorporation_colab.ipynb
@@ -16,7 +16,7 @@
       "outputs": [],
       "source": [
         "%cd /content\n",
-        "!git clone -b Oncorporation https://github.com/camenduru/audiocraft\n",
+        "!git clone https://github.com/Oncorporation/audiocraft\n",
         "%cd /content/audiocraft\n",
         "!pip install -r requirements.txt\n",
         "!python app.py --share"
