pip install gradio

--- a/MusicGen_Oncorporation_colab.ipynb
+++ b/MusicGen_Oncorporation_colab.ipynb
@@ -19,6 +19,7 @@
         "!git clone https://github.com/Oncorporation/audiocraft\n",
         "%cd /content/audiocraft\n",
         "!pip install -r requirements.txt\n",
+        "!pip install gradio\n",
         "!python app.py --share"
       ]
     }
