--- a/MusicGen_Oncorporation_colab.ipynb
+++ b/MusicGen_Oncorporation_colab.ipynb
@@ -18,8 +18,8 @@
         "%cd /content\n",
         "!git clone https://github.com/Oncorporation/audiocraft\n",
         "%cd /content/audiocraft\n",
+        "!sed -i -e 's/textwrap/textwrap3/g' /content/audiocraft/requirements.txt\n",
         "!pip install -r requirements.txt\n",
-        "!pip install gradio\n",
         "!python app.py --share"
       ]
     }
