--- a/MusicGen_longgen_colab.ipynb
+++ b/MusicGen_longgen_colab.ipynb
@@ -16,7 +16,7 @@
       "outputs": [],
       "source": [
         "%cd /content\n",
-        "!git clone -b longgen https://github.com/facebookresearch/audiocraft\n",
+        "!git clone https://github.com/facebookresearch/audiocraft\n",
         "%cd /content/audiocraft\n",
         "!pip install -r requirements.txt\n",
         "!python app.py --share"
