thanks to ClownOfMadness ❤

--- a/MusicGen_ClownOfMadness_colab.ipynb
+++ b/MusicGen_ClownOfMadness_colab.ipynb
@@ -17,7 +17,7 @@
       "source": [
         "%cd /content\n",
         "!git clone -b bg https://github.com/ClownOfMadness/audiocraft_plus\n",
-        "%cd /content/audiocraft\n",
+        "%cd /content/audiocraft_plus\n",
         "!pip install -r requirements.txt\n",
         "!python app.py --share"
       ]
