--- a/MusicGen_neuroidss_colab.ipynb
+++ b/MusicGen_neuroidss_colab.ipynb
@@ -17,7 +17,7 @@
       "source": [
         "%cd /content\n",
         "!git clone https://github.com/neuroidss/audiocraft_neurofeedback\n",
-        "%cd /content/audiocraft\n",
+        "%cd /content/audiocraft_neurofeedback\n",
         "!pip install -r requirements.txt\n",
         "!python app.py --share"
       ]
